update /javascript/clerk/sign-in and /javascript/clerk-sign-up

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -37,7 +37,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
       const SignInPage = () => (
         <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
       );
-      
+
       export default SignInPage;
       ```
     </CodeBlockTabs>
@@ -92,61 +92,43 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
 
     <InjectKeys>
 
-    <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-      ```typescript
+    <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+      ```js filename="index.js" {14}
       import Clerk from '@clerk/clerk-js';
-      import { dark } from "@clerk/themes";
-
-      // Add a <div> element with id="sign-in" to your HTML
-      document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-        <div
-          id="sign-in"
-        >
-        </div>
-      `;
-
-      const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
 
       // Initialize Clerk with your Clerk publishable key
-      const clerk = new Clerk(`{{pub_key}}`);
+      const clerk = new Clerk('{{pub_key}}');
       await clerk.load();
 
-      clerk.mountSignIn(signInComponent, {
-        appearance: {
-          baseTheme: dark
-        }
-      });
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv =
+        document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
       ```
 
-      ```html
-      <!-- Add a <div> element with id="sign-in" to your HTML -->
+      ```html filename="index.html" {10}
+      <!-- Add a <div id="sign-in"> element to your HTML -->
       <div id="sign-in"></div>
 
       <script>
-        const script = document.createElement('script');
-        // Set your Clerk publishable key
-        script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
-        script.async = true;
-        script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+        window.addEventListener("load", async function () {
+          await Clerk.load();
 
-        script.addEventListener('load', async function () {
-          await window.Clerk.load();
+          const signInDiv =
+            document.getElementById('sign-in');
 
-          const signInComponent = document.querySelector('#sign-in');
-
-          window.Clerk.openSignIn(signInComponent, {
-            appearance: {
-              baseTheme: dark
-            }
-          });
+          Clerk.mountSignIn(signInDiv);
         });
-        document.body.appendChild(script);
       </script>
       ```
     </CodeBlockTabs>
 
     </InjectKeys>
-  </Tab>  
+  </Tab>
 </Tabs>
 
 ## Properties
@@ -170,4 +152,3 @@ To learn about how to customize Clerk components, see the [customization documen
 
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
-
