--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -85,12 +85,48 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```js filename="sign-up.js"
-    window.Clerk.mountSignUp(
-      document.getElementById("sign-up")
-    );
-    window.Clerk.openSignUp();
-    ```
+    In the example below, the [`mountSignUp()`](/docs/references/javascript/clerk/sign-up#mount-sign-up) method is used to render the `<SignUp />` component to a `<div>` element with `id="sign-up"`.
+
+    To learn more about the methods available for rendering and controlling the `<SignUp />` component in a JavaScript application, see the [JavaScript reference docs](/docs/references/javascript/clerk/sign-up).
+
+    <InjectKeys>
+
+    <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+      ```typescript filename="index.ts" {14}
+      import Clerk from '@clerk/clerk-js';
+
+      // Initialize Clerk with your Clerk publishable key
+      const clerk = new Clerk('{{pub_key}}');
+      await clerk.load();
+
+      document.getElementById("app").innerHTML = `
+        <div id="sign-up"></div>
+      `;
+
+      const signUpDiv =
+        document.getElementById("sign-up");
+
+      clerk.mountSignUp(signUpDiv);
+      ```
+
+      ```html filename="index.js" {11}
+      <!-- Add a <div id="sign-up"> element to your HTML -->
+      <div id="sign-up"></div>
+
+      <script>
+        window.addEventListener("load", async function () {
+          await Clerk.load();
+
+          const signUpDiv =
+            document.getElementById('sign-up');
+
+          Clerk.mountSignUp(signUpDiv);
+        });
+      </script>
+      ```
+    </CodeBlockTabs>
+
+    </InjectKeys>
   </Tab>
 </Tabs>
 
