--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -36,7 +36,7 @@ To add the [ClerkJS SDK](/docs/references/javascript/overview) to your JavaScrip
 
 Select your preferred method below to get started.
 
-<Tabs items={["NPM module", "<script>"]}>
+<Tabs type="npm-script" items={["NPM module", "<script>"]}>
   {/* NPM module tab */}
   <Tab>
     <Steps>
