--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -37,52 +37,37 @@ In the example below, the `<SignIn />` component is rendered to a `<div>` elemen
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```ts filename="index.ts" {17}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.js" {14}
   import Clerk from '@clerk/clerk-js';
 
-  // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="sign-in"
-    >
-    </div>
-  `;
-
-  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
-
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.mountSignIn(signInComponent, {});
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv =
+    document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
   ```
 
-  ```html filename="index.html" {22}
+  ```html filename="index.html" {10}
   <!-- Add a <div id="sign-in"> element to your HTML -->
   <div id="sign-in"></div>
 
   <script>
-    // Get this URL and Publishable Key from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      const signInDiv =
+        document.getElementById('sign-in');
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const signInComponent = document.querySelector('#sign-in');
-
-      window.Clerk.mountSignIn(signInComponent, {});
+      Clerk.mountSignIn(signInDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -107,56 +92,45 @@ function unmountSignIn(node: HTMLDivElement): void;
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```js filename="index.ts" {19}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.js" {18}
   import Clerk from '@clerk/clerk-js';
 
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="sign-in"
-    ></div>
-  `
-
-  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
-
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.mountSignIn(signInComponent, {});
+  document.getElementById('app').innerHTML = `
+    <div id="sign-in"></div>
+  `
+
+  const signInDiv =
+    document.getElementById('sign-in');
+
+  clerk.mountSignIn(signInDiv);
 
   // ...
 
-  clerk.unmountSignIn(signInComponent, {});
+  clerk.unmountSignIn(signInDiv);
   ```
 
-  ```html filename="index.html" {24}
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="sign-in"> element to your HTML -->
   <div id="sign-in"></div>
+
   <script>
-    // Get this URL and Publishable Key from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      const signInDiv =
+        document.getElementById('sign-in');
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const signInComponent = document.querySelector('#sign-in');
-
-      window.Clerk.mountSignIn(signInComponent, {});
+     Clerk.mountSignIn(signInDiv);
 
       // ...
 
-      window.Clerk.unmountSignIn(signInComponent, {});
+      Clerk.unmountSignIn(signInDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -195,37 +169,24 @@ The type of the `props` parameter in the `openSignIn()` method is defined as fol
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```js filename="index.ts" {7}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.js" {7}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   clerk.openSignIn();
   ```
 
-  ```html filename="index.html" {17}
+  ```html filename="index.html" {5}
   <script>
-    // Get this URL and Publishable Key from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      window.Clerk.openSignIn();
+      Clerk.openSignIn();
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -244,10 +205,9 @@ function closeSignIn(): void;
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```js filename="index.ts" {12}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.js" {11}
   import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
 
   // Initialize Clerk with your Clerk publishable key
   const clerk = new Clerk('{{pub_key}}');
@@ -260,30 +220,17 @@ function closeSignIn(): void;
   clerk.closeSignIn();
   ```
 
-  ```html filename="index.html" {21}
+  ```html filename="index.html" {8}
   <script>
-    // Get your Publishable Key and Frontend API URL from the Clerk Dashboard
-    const clerkPublishableKey = '{{pub_key}}';
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      window.Clerk.openSignIn();
+      Clerk.openSignIn();
 
       // ...
 
-      window.Clerk.closeSignIn();
+      Clerk.closeSignIn();
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
