--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -49,51 +49,37 @@ The type of the `props` parameter in the `mountSignUp()` function is defined as 
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript filename="index.ts" {17}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```typescript filename="index.ts" {14}
   import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
-
-  // Selects for <div id="app"> and adds a <div id="sign-up"> to it
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="sign-up"
-    ></div>
-  `;
-
-  const signUpComponent = document.querySelector<HTMLDivElement>('#sign-up')!;
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.mountSignUp(signUpComponent, {});
+  document.getElementById("app").innerHTML = `
+    <div id="sign-up"></div>
+  `;
+
+  const signUpDiv =
+    document.getElementById("sign-up");
+
+  clerk.mountSignUp(signUpDiv);
   ```
 
-  ```html filename="index.js" {21}
+  ```html filename="index.js" {11}
   <!-- Add a <div id="sign-up"> element to your HTML -->
   <div id="sign-up"></div>
+
   <script>
-    // Get this URL and Publishable Key from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      const signUpDiv =
+        document.getElementById('sign-up');
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const signUpComponent = document.querySelector('#sign-up');
-
-      window.Clerk.mountSignUp(signUpComponent, {});
+      Clerk.mountSignUp(signUpDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -118,58 +104,45 @@ function unmountSignUp(node: HTMLDivElement): void;
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript filename="index.ts" {20}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```typescript filename="index.ts" {18}
   import Clerk from '@clerk/clerk-js';
 
-  // Selects for <div id="app"> and adds a <div id="sign-up"> to it
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="sign-up"
-    ></div>
-  `
-
-  const signUpComponent = document.querySelector<HTMLDivElement>('#sign-up')!;
-
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.mountSignUp(signUpComponent);
+  document.getElementById("app").innerHTML = `
+    <div id="sign-up"></div>
+  `;
+
+  const signUpDiv =
+    document.getElementById("sign-up");
+
+  clerk.mountSignUp(signUpDiv);
 
   // ...
 
-  clerk.unmountSignUp(signUpComponent);
+  clerk.unmountSignUp(signUpDiv);
   ```
 
-  ```html filename="index.js" {25}
+  ```html filename="index.js" {15}
   <!-- Add a <div id="sign-up"> element to your HTML -->
   <div id="sign-up"></div>
+
   <script>
-    // Get this URL and Publishable Key from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      const signUpDiv =
+        document.getElementById('sign-up');
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const signUpComponent = document.querySelector('#sign-up');
-
-      window.Clerk.mountSignUp(signUpComponent);
+      Clerk.mountSignUp(signUpDiv);
 
       // ...
 
-      window.Clerk.unmountSignUp(signUpComponent);
+      Clerk.unmountSignUp(signUpDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -194,37 +167,24 @@ function openSignUp(props?: SignUpProps): void;
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
   ```js filename="index.ts" {7}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   clerk.openSignUp();
   ```
 
-  ```html filename="index.html" {17}
+  ```html filename="index.html" {4}
   <script>
-    // Get this URL and Publishable Key from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      window.Clerk.openSignUp();
+      Clerk.openSignUp();
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -243,10 +203,9 @@ function closeSignUp(): void;
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript filename="index.ts" {12}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="index.ts" {11}
   import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
 
   // Initialize Clerk with your Clerk publishable key
   const clerk = new Clerk('{{pub_key}}');
@@ -259,30 +218,17 @@ function closeSignUp(): void;
   clerk.closeSignUp();
   ```
 
-  ```html filename="index.js" {21}
+  ```html filename="index.html" {8}
   <script>
-    // Get your Publishable Key and Frontend API URL from the Clerk Dashboard
-    const clerkPublishableKey = '{{pub_key}}';
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      window.Clerk.openSignUp();
+      Clerk.openSignUp();
 
       // ...
 
-      window.Clerk.closeSignUp();
+      Clerk.closeSignUp();
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
