fix broken authMiddleware example

--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -200,7 +200,7 @@ You can also use regex to match routes. The following is an example of a negativ
 import { authMiddleware } from "@clerk/nextjs";
 
 export default authMiddleware({
-  publicRoutes: ["((?!^/admin/).*)"],
+  publicRoutes: ["((?!^/admin).*)"],
 });
 
 export const config = {
