apply code review suggestion

--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -8,8 +8,10 @@ description: Learn how to add custom pages and include external links within the
 The [`<UserProfile />`](/docs/components/user/user-profile) component supports the addition of custom pages and use of external links in the navigation sidebar.
 
 There are two ways to render the `<UserProfile />` component:
-- As a modal that opens when the [`<UserButton />`](/docs/components/user/user-button) is clicked
+- As a modal
 - As a dedicated page
+
+Both can be accessed when the user selects the [`<UserButton />`](/docs/components/user/user-button), and then selects the **Manage account** option.
 
 This guide includes examples for both use cases. You can select one of the following two tabs on the code examples to see the implementation for your preferred use case:
 
